--- a/Static/CSS/style.css
+++ b/Static/CSS/style.css
@@ -1,3 +1,12 @@
 /* .row, .article{
     margin: 8px;
 } */
+body {
+    color:#f7f7f7;
+}
+
+.jumbotron {
+    background-image: url("../images/nasa.jpg");
+    background-size: 100% 100%;
+    text-align: center;
+}
